@@ -12,12 +12,17 @@
 #include "cgicc/FormEntry.h"
 #include "cgicc/HTMLClasses.h"
 
+#include "FWCore/Utilities/interface/Exception.h"
+#include "FWCore/MessageLogger/interface/MessageLogger.h"
+
 #include <stdio.h>
 
 using namespace std;
+
 namespace evf{
 
-    const std::string ExceptionGenerator::menu[menu_items] =  {"SleepForever","Exit with error","Abort", "Unknown Exception", "Endless loop" };
+    const std::string ExceptionGenerator::menu[menu_items] =  
+      {"Sleep x ms", "SleepForever", "Cms Exception", "Exit with error", "Abort", "Unknown Exception", "Endless loop", "Generate Error Message" };
 
     ExceptionGenerator::ExceptionGenerator( const edm::ParameterSet& pset) : 
       ModuleWeb("ExceptionGenerator"), actionRequired_(false), actionId_(-1)
@@ -34,19 +39,28 @@ namespace evf{
 	  switch(actionId_)
 	    {
 	    case 0:
-	      ::sleep(0xFFFFFFF);
+	      ::usleep(intqualifier_*1000);
 	      break;
 	    case 1:
-	      exit(-1);
+	      ::sleep(0xFFFFFFF);
 	      break;
 	    case 2:
-	      abort();
+	      throw cms::Exception(qualifier_) << "This exception was generated by the ExceptionGenerator";
 	      break;
 	    case 3:
-	      throw "pippo";
+	      exit(-1);
 	      break;
 	    case 4:
+	      abort();
+	      break;
+	    case 5:
+	      throw qualifier_;
+	      break;
+	    case 6:
 	      while(1){ind+=step; if(ind>1000000) step = -1; if(ind==0) step = 1;}
+	      break;
+	    case 7:
+	      edm::LogError("TestErrorMessage") << qualifier_;
 	    }
 	}
     }
@@ -60,6 +74,7 @@ namespace evf{
     {
 
       std::string path;
+      std::string urn;
       std::string mname;
       try 
 	{
@@ -67,11 +82,17 @@ namespace evf{
 	  if ( xgi::Utils::hasFormElement(cgi,"exceptiontype") )
 	    {
 	      actionId_ = xgi::Utils::getFormElement(cgi, "exceptiontype")->getIntegerValue();
+	      if(actionId_>0)
+		qualifier_ = xgi::Utils::getFormElement(cgi, "qualifier")->getValue();
+	      else
+		intqualifier_ =  xgi::Utils::getFormElement(cgi, "qualifier")->getIntegerValue();
 	      actionRequired_ = true;
 	    }
 	  if ( xgi::Utils::hasFormElement(cgi,"module") )
 	    mname = xgi::Utils::getFormElement(cgi, "module")->getValue();
 	  cgicc::CgiEnvironment cgie(in);
+	  if(original_referrer_ == "")
+	    original_referrer_ = cgie.getReferrer();
 	  path = cgie.getPathInfo() + "?" + cgie.getQueryString();
 	  
 	}
@@ -84,17 +105,67 @@ namespace evf{
       using std::endl;
       *out << "<html>"                                                   << endl;
       *out << "<head>"                                                   << endl;
-      
-      *out << "<title>" << typeid(ExceptionGenerator).name()
+
+
+      *out << "<STYLE type=\"text/css\"> #T1 {border-width: 2px; border: solid blue; text-align: center} </STYLE> "                                      << endl; 
+      *out << "<link type=\"text/css\" rel=\"stylesheet\"";
+      *out << " href=\"/" <<  urn
+	   << "/styles.css\"/>"                   << endl;
+
+      *out << "<title>" << moduleName_
 	   << " MAIN</title>"                                            << endl;
-      
+
       *out << "</head>"                                                  << endl;
-      *out << "<body>"                                                   << endl;
-      
+      *out << "<body onload=\"loadXMLDoc()\">"                           << endl;
+      *out << "<table border=\"0\" width=\"100%\">"                      << endl;
+      *out << "<tr>"                                                     << endl;
+      *out << "  <td align=\"left\">"                                    << endl;
+      *out << "    <img"                                                 << endl;
+      *out << "     align=\"middle\""                                    << endl;
+      *out << "     src=\"/evf/images/systemerror.jpg\""	         << endl;
+      *out << "     alt=\"main\""                                        << endl;
+      *out << "     width=\"90\""                                        << endl;
+      *out << "     height=\"64\""                                       << endl;
+      *out << "     border=\"\"/>"                                       << endl;
+      *out << "    <b>"                                                  << endl;
+      *out <<             moduleName_                                    << endl;
+      *out << "    </b>"                                                 << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "  <td width=\"32\">"                                      << endl;
+      *out << "    <a href=\"/urn:xdaq-application:lid=3\">"             << endl;
+      *out << "      <img"                                               << endl;
+      *out << "       align=\"middle\""                                  << endl;
+      *out << "       src=\"/hyperdaq/images/HyperDAQ.jpg\""             << endl;
+      *out << "       alt=\"HyperDAQ\""                                  << endl;
+      *out << "       width=\"32\""                                      << endl;
+      *out << "       height=\"32\""                                     << endl;
+      *out << "       border=\"\"/>"                                     << endl;
+      *out << "    </a>"                                                 << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "  <td width=\"32\">"                                      << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "  <td width=\"32\">"                                      << endl;
+      *out << "    <a href=\"" << original_referrer_  << "\">"           << endl;
+      *out << "      <img"                                               << endl;
+      *out << "       align=\"middle\""                                  << endl;
+      *out << "       src=\"/evf/images/spoticon.jpg\""			 << endl;
+      *out << "       alt=\"main\""                                      << endl;
+      *out << "       width=\"32\""                                      << endl;
+      *out << "       height=\"32\""                                     << endl;
+      *out << "       border=\"\"/>"                                     << endl;
+      *out << "    </a>"                                                 << endl;
+      *out << "  </td>"                                                  << endl;
+      *out << "</tr>"                                                    << endl;
+      *out << "</table>"                                                 << endl;
+
+      *out << "<hr/>"                                                    << endl;
+
+  
       *out << cgicc::form().set("method","GET").set("action", path ) 
 	   << std::endl;
       *out << cgicc::input().set("type","hidden").set("name","module").set("value", mname) 
 	   << std::endl;
+      *out << "Select   "						 << endl;
       *out << cgicc::select().set("name","exceptiontype")     << std::endl;
       char istring[2];
 
@@ -104,6 +175,9 @@ namespace evf{
 	  *out << cgicc::option().set("value",istring) << menu[i] << cgicc::option()       << std::endl;
 	}
       *out << cgicc::select() 	     << std::endl;
+      *out << "<br>"                                                     << endl;
+      *out << "Qualifier"      						 << endl;
+      *out << cgicc::input().set("type","text").set("name","qualifier")  	     << std::endl;
       *out << cgicc::input().set("type","submit").set("value","Do It !")  	     << std::endl;
       *out << cgicc::form()						   << std::endl;  
 
@@ -111,4 +185,4 @@ namespace evf{
       *out << "</html>"                                                  << endl;
     }
 
-    }
+} // end namespace evf
