@@ -1,3 +1,11 @@
+2008-02-27  Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V00-14-02
+	* added state transition E->F to StateMachine
+	* moduleName moved from private to protected in ModuleWeb
+	* more style info in Css.h
+	* various improvements to ExceptionGenerator
+
 2008-02-20  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>
 
 	* tag V00-14-01
